[package]
name    = "sienna-schedule"
version = "2.0.0-rc1"
authors = ["Adam A. <adam@hack.bg>"]
edition = "2018"

[lib]
name = "sienna_schedule"
path = "lib/lib.rs"

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
serde        = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars     = "0.7"

[dev-dependencies]
clap            = "3.0.0-beta.2"
svg             = "0.9.0"
spreadsheet-ods = "0.5.2"
color-rs        = "^0.5.0"
serde-json-wasm = "0.2.1"

[[example]]
name = "sienna_schedule"
path = "bin/cli.rs"
