[package]
name = "lp-token"
version = "1.0.0"
authors = ["Asparuh Kamenov <asparuh@hack.bg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
amm-shared = { path = "../../../libraries/amm-shared" }

fadroma-bind-js = { optional = true, path = "../../../libraries/fadroma-next/crates/fadroma-bind-js" }
wasm-bindgen    = { optional = true, version = "0.2" }
js-sys          = { optional = true, version = "0.3.55" }

[features]
browser = [ "fadroma-bind-js", "wasm-bindgen", "wasm-bindgen/serde-serialize", "js-sys" ]
