[package]
name = "sienna-rewards"
version = "3.0.0"
authors = ["Adam Avramov <adam@hack.bg>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
path = "lib.rs"

[dependencies]
fadroma  = { path = "../../../deps/fadroma/crates/fadroma", features = ["scrt"] }
schemars = "0.7"
serde    = { version = "1.0.103", default-features = false, features = ["derive"] }

fadroma-bind-js = { optional = true, path = "../../../deps/fadroma/crates/fadroma-bind-js" }
amm-shared = { path = "../../../libraries/amm-shared" }
wasm-bindgen    = { optional = true, version = "0.2" }
js-sys          = { optional = true, version = "0.3.55" }

remain    = { version = "0.2.2"  }
ripemd160 = { version = "0.9.1"  }
secp256k1 = { version = "0.20.3" }
sha2      = { version = "0.9.1", default-features = false }

[dev-dependencies]
fadroma = { path = "../../../deps/fadroma/crates/fadroma", features = ["scrt", "harness", "backtraces"] }
kukumba = { path = "../../../libraries/kukumba" }

serde_json = "1.0"
tabwriter = "1.2.1"
yansi = "0.5.0"
backtrace = "0.3.61"
color-backtrace = "0.5.1"
rand = "0.8.4"
prettytable-rs = "^0.8"
serde_yaml = "0.8"


[features]
browser = [
  "fadroma/browser", "fadroma-bind-js",
  "wasm-bindgen", "wasm-bindgen/serde-serialize",
  "js-sys"
]
